--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "helmet": "^5.0.2",
+    "jest": "^29.7.0",
     "luxon": "^3.4.4",
     "passport-jwt": "^4.0.1"
   },
@@ -67,5 +68,40 @@
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5",
     "webpack": "^5.0.0"
+  },
+  "jest": {
+    "runtime": "@side/jest-runtime",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "src/**/*.(t|j)s",
+      "!src/main.(t|j)s"
+    ],
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "coverageThreshold": {
+      "global": {
+        "statements": 0,
+        "branches": 0,
+        "lines": 0
+      }
+    },
+    "coveragePathIgnorePatterns": [
+      "src/common/",
+      "dist/",
+      "node_modules/"
+    ],
+    "testPathIgnorePatterns": [
+      "src/common/",
+      "dist/",
+      "node_modules/"
+    ]
   }
 }
