--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^7.2.0",
     "@nestjs/terminus": "^8.0.4",
     "@nestjs/throttler": "^4.0.0",
     "@prisma/client": "^3.15.2",
