--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.2.0",
     "@nestjs/terminus": "^8.0.4",
     "@nestjs/throttler": "^4.0.0",
-    "@prisma/client": "^3.15.2",
+    "@prisma/client": "^4.4.0",
     "@side/jest-runtime": "^1.0.2",
     "@types/luxon": "^3.3.0",
     "@types/qs": "^6.9.7",
@@ -60,7 +61,7 @@
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.3.2",
-    "prisma": "^3.15.2",
+    "prisma": "^4.4.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.7",
