--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "helmet": "^5.0.2",
     "jest": "^29.7.0",
     "luxon": "^3.4.4",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "pm2": "^5.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.4",
